--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,6 @@ language: python
 python:
   - 3.7
 install:
-  - pip install -r requirements.txt
+  - pip install -r requirements-test.txt
 script:
-  - python -m pytest -v
+  - python test.py
