Travis CI Deploy to App Engine
Signed-off-by: Pradyumna <51270439+PradyumnaKrishna@users.noreply.github.com>

--- a/.gcloudignore
+++ b/.gcloudignore
@@ -12,6 +12,13 @@
 # below:
 .git
 .gitignore
+key.json*
+.travis.yml
+test.py
+requirements-test.txt
+Docs/
+test/
+Procfile
 env
 
 # Python pycache:
