--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,1 @@
-absl-py==0.11.0
-astunparse==1.6.3
-click==7.1.2
-Flask==1.1.2
-flatbuffers==1.12
-gast==0.3.3
-gunicorn==20.0.4
-h5py==2.10.0
-itsdangerous==1.1.0
-Jinja2==2.11.2
-Keras-Preprocessing==1.1.2
-MarkupSafe==1.1.1
-numpy==1.19.4
-opencv-python-headless==4.4.0.46
-opt-einsum==3.3.0
-protobuf==3.14.0
-six==1.15.0
-tensorflow-cpu==2.4.0
-termcolor==1.1.0
-typing-extensions==3.7.4.3
-Werkzeug==1.0.1
-wrapt==1.12.1
+-r requirements/amd64.txt
