--- a/.travis.yml
+++ b/.travis.yml
@@ -11,4 +11,5 @@ script:
   - coverage run test.py
 
 after_success:
-  bash <(curl -s https://codecov.io/bash)
+  - bash <(curl -s https://codecov.io/bash)
+  - bash deploy.sh
